Fixed door not showing up

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ html, body {
     float: right;
     text-align: right;
     margin: 24px;
-    padding: 8px;
+    padding: 16px;
     background-color: #210439;
     border-radius: 5px;
     color: #E9D0EA;
